<resources>
    <string name="app_name">Course Rating</string>
    <string name="course_name">Course Name</string>
    <string name="instructor_name">Instructor Name</string>
    <string name="rating_bar">Rating Bar</string>
    <string name="undergrad">Undergrad?</string>
    <string name="submit_rating">Submit Rating</string>
    <string-array name="course_type">
        <item>General Education</item>
        <item>Major Requirement</item>
        <item>Minor Requirement</item>
        <item>Elective</item>
    </string-array>
</resources>