<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:text="@string/app_name"
        />

    <EditText
        android:id="@+id/course_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:autofillHints="name"
        android:hint="@string/course_name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575" />

    <EditText
        android:id="@+id/instructor_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:autofillHints="name"
        android:hint="@string/instructor_name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:entries="@array/course_type"
        android:minHeight="48dp"
        android:padding="5dp" />

    <Switch
        android:id="@+id/Undergrad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:padding="5dp"
        android:minHeight="48dp"
        android:textSize="20sp"
        android:text="@string/undergrad"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_gravity="center"
        android:contentDescription="@string/rating_bar"
        android:numStars="5"
        android:stepSize="1"
        />

    <Button
        android:id="@+id/submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/submit_rating" />

</LinearLayout>